# cuGMEC

./: CMAKE_BUILD.md  CMakeLists.txt  Makefile  README.md  build.sh  config.json
.github/: CODEOWNERS
diag/: Plot.m  colorZQ.mat  computePhaseSpaceOrbit.m
doc/: 1. User Guide of cuGMEC.docx  2. Configure environment and compilerun cuGMEC.docx  3. Test Case.docx
docs/en-US/: environment.md  parameters.md
docs/zh-CN/: environment.md  parameters.md
equil/desc/: DESC2PEST2SFA2D.m  Desc2Boozer2ShiftAlign.m  MergeMore2D.m  OutputEquilibrium2D.m  OutputMHDEquilibrium.m  OutputMHDPerturbation.m  OutputMHDPerturbation3D.m  OutputNormalization.m  OutputNormalization2D.m  OutputPhaseSpaceMapping.m  ShowAnalyticProfile.m  ShowNumericalProfile.m  ShowProfile1D.m  TransferEquilibrium2D.m  computeEquilibrium2D.ipynb  cuGMECInput2D.m  mbind_cell_col.m  mbind_col.m  outputEquilibrium2D.ipynb
lib/BSI/: TestMatlabBspline2.m  TestMatlabBspline_nonuniform.m  Test_nonuniform.cpp  bspline.cpp
lib/BSI/BSplineInterpolation/: Interpolation.hpp
scripts/equilibrium/: compute2D_0170.ipynb  output2D_0170.ipynb  output3D_0170.ipynb
scripts/postprocess/: visualizeMHD.m  visualizePIC.m  visualizePhaseSpaceOrbit.m
scripts/preprocess/: DESC2PEST2SFA2D.m  DESC2PEST2SFA3D.m  generateInput2D.m  generateInput3D.m  generatePhaseSpaceMapping2D.m  writeEquilibrium2D.m  writeEquilibrium3D.m  writeNormalization2D.m  writeNormalization3D.m  writeProfile1D.m
scripts/preprocess/BSI/: TestMatlabBspline2.m  TestMatlabBspline_nonuniform.m  Test_nonuniform.cpp  bspline.cpp  bspline.mexw64
src/: cuGMEC.cu  cuGMEC.h  cuGMEC_const.h  cuGMEC_main.cu  cuGMEC_model.h  cuGMEC_param.h  cuGMEC_setup.h
src/kernels/: mhd.cuh  pic.cuh  utils.cuh
